# vscode-settings

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
entrypoints/: show.sh
profiles/: Default.code-profile  SQLServer.code-profile  dark-1.code-profile  dark-2.code-profile  oracle.code-profile  sqlserver.code-profile  ssh.code-profile
src/vscode_settings/: utilities.py
